--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@better-scroll/observe-dom": "^2.4.2",
+    "@better-scroll/slide": "^2.4.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-lazy": "^1.0.0-alpha.1",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -29,6 +33,6 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^10.1.0"
   }
 }
